# Message-reader

./: .env.example  .gitignore  CLAUDE.md  CODE_REVIEW_REPORT.md  Dockerfile  FIXES_SUMMARY.md  README.md  docker-compose.yml  overview design.md  pyproject.toml  requirements.txt
.claude/: settings.json
config/: config.example.yaml  feeds.example.yaml
docs/: README.md  REVIEW_SUMMARY.md
docs/design/: ai-design.md  core-design.md  fetcher-design.md  models-design.md  notifier-design.md  services-design.md  storage-design.md  visualization-design.md  web-design.md
docs/modules/: agents-design.md
migrations/: 001_add_missing_fields.sql
src/: __init__.py  config.py  feeds.py  main.py  scheduler.py  visualization.py
src/agents/: __init__.py  base.py  collector.py  curator.py  editor.py  entity_backfill.py  extractor.py  info_curator.py  librarian.py  merger.py  orchestrator.py  trace_manager.py
src/ai/: __init__.py  analyzer.py  prompts.py
src/fetcher/: __init__.py  content_extractor.py  rss_parser.py
src/models/: __init__.py  agent.py  analysis.py  article.py  entity.py  information.py  telemetry.py
src/notifier/: __init__.py  email_sender.py
src/services/: __init__.py  embedding.py  llm.py  telemetry.py
src/storage/: __init__.py  database.py  entity_store.py  information_store.py  models.py  telemetry_store.py  vector_store.py
src/visualization/: trend_chart.py
src/web/: server.py  (+2 more)
tests/: test_ai.py  test_database.py  test_feeds.py  test_fetcher.py  test_information_store.py  test_models.py  test_progress_tracker.py  test_vector_store.py
(+8 files in other folders)
